tambah posisi dan edit lainnya
