# routes/api.php
@@ -17,16 +17,24 @@ use Illuminate\Support\Facades\Route;
 Route::post('/login', 'AuthController@login');
 
 Route::group(['middleware' => 'auth:sanctum'], function() {
-    Route::get('/jabatan/list', 'GroupController@getAll');
-    Route::get('/jabatan/view/{id?}', 'GroupController@getById');
-    Route::post('/jabatan/save/{id?}', 'GroupController@save');
-    Route::post('/jabatan/delete/{id?}', 'GroupController@delete');
+    Route::get('/jabatan/list', 'PositionController@getAll');
+    Route::get('/jabatan/view/{id?}', 'PositionController@getById');
+    Route::post('/jabatan/save/{id?}', 'PositionController@save');
+    Route::post('/jabatan/delete/{id?}', 'PositionController@delete');
+    Route::post('/jabatan/search', 'PositionController@searchPosition');
+
+    Route::get('/unit/list', 'GroupController@getAll');
+    Route::get('/unit/view/{id?}', 'GroupController@getById');
+    Route::post('/unit/save/{id?}', 'GroupController@save');
+    Route::post('/unit/delete/{id?}', 'GroupController@delete');
+    Route::post('/unit/search', 'GroupController@searchGroup');
     
     Route::get('/user/list', 'UserController@getAll');
     Route::get('/user/view/{id?}', 'UserController@getById');
     Route::post('/user/save/{id?}', 'UserController@save');
     Route::post('/user/delete/{id?}', 'UserController@delete');
     Route::post('/user/changePassword/{id?}', 'UserController@changePassword');
+    Route::post('/user/search', 'UserController@searchUser');
 
     Route::get('/menu/allMenuPermission', 'MenuController@getAllMenuPermission');
     Route::get('/menu/list', 'MenuController@getAll');
