# storage/api-docs/api-docs.json
@@ -63,6 +63,154 @@
                 }
             }
         },
+        "/spnbackend/public/api/unit/list": {
+            "get": {
+                "tags": [
+                    "Unit"
+                ],
+                "summary": "List Unit",
+                "description": "List Unit",
+                "operationId": "auth",
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/spnbackend/public/api/unit/view": {
+            "get": {
+                "tags": [
+                    "Unit"
+                ],
+                "summary": "Detail Unit",
+                "description": "Unit By ID",
+                "operationId": "auth",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/spnbackend/public/api/unit/save": {
+            "post": {
+                "tags": [
+                    "Unit"
+                ],
+                "summary": "Tambah atau edit Unit",
+                "description": "Tambah atau edit Unit",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "group_name": {
+                                        "type": "string"
+                                    },
+                                    "group_code": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object",
+                                "example": {
+                                    "group_name": "Ikhwan Komputer",
+                                    "group_code": "IKE"
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/spnbackend/public/api/unit/delete": {
+            "post": {
+                "tags": [
+                    "Unit"
+                ],
+                "summary": "Hapus Unit",
+                "description": "Hapus Unit",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/spnbackend/public/api/unit/search": {
+            "post": {
+                "tags": [
+                    "Unit"
+                ],
+                "summary": "Hapus Unit",
+                "description": "Hapus Unit",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/spnbackend/public/api/jabatan/list": {
             "get": {
                 "tags": [
@@ -135,17 +283,25 @@
                         "application/json": {
                             "schema": {
                                 "properties": {
-                                    "group_name": {
+                                    "group_id": {
+                                        "type": "integer"
+                                    },
+                                    "position_name": {
                                         "type": "string"
                                     },
-                                    "group_code": {
+                                    "position_type": {
+                                        "type": "string"
+                                    },
+                                    "detail": {
                                         "type": "string"
                                     }
                                 },
                                 "type": "object",
                                 "example": {
-                                    "group_name": "Ikhwan Komputer",
-                                    "group_code": "IKE"
+                                    "group_id": "1",
+                                    "position_name": "Kepala Dinas",
+                                    "position_type": "Gol. III",
+                                    "detail": "Tanggung Jawab Untuk"
                                 }
                             }
                         }
@@ -180,6 +336,25 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/spnbackend/public/api/jabatan/search": {
+            "post": {
+                "tags": [
+                    "Jabatan"
+                ],
+                "summary": "Cari Jabatan",
+                "description": "Cari Jabatan",
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -236,7 +411,7 @@
                     "User"
                 ],
                 "summary": "Detail User",
-                "description": "User By ID",
+                "description": "Detail ID",
                 "operationId": "auth",
                 "parameters": [
                     {
@@ -318,7 +493,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/user/changePassword": {
@@ -359,7 +539,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/user/delete": {
@@ -383,7 +568,31 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/spnbackend/public/api/user/search": {
+            "post": {
+                "tags": [
+                    "User"
+                ],
+                "summary": "Cari User",
+                "description": "Cari User",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/menu/list": {
@@ -518,7 +727,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/menu/delete": {
@@ -542,7 +756,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/suratKeluar/save": {
@@ -616,7 +835,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/suratKeluar/disposisi": {
@@ -659,7 +883,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         },
         "/spnbackend/public/api/suratKeluar/read": {
@@ -683,7 +912,12 @@
                     "200": {
                         "description": "OK"
                     }
-                }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
             }
         }
     },
